fix: gap between top items

--- a/src/app/components/blog-content/blog-content.module.scss
+++ b/src/app/components/blog-content/blog-content.module.scss
@@ -29,7 +29,7 @@
 
   .blogInfo {
     display: flex;
-    gap: 16px;
+    gap: 8px;
     margin-bottom: 12px;
 
     .blogDetail {
@@ -51,7 +51,7 @@
 
     .icon {
       width: 16px;
-      margin-right: 6px;
+      margin-right: 4px;
     }
   }
 
